# poetry-pyrightconfig

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/poetry_pyrightconfig/: __init__.py  command.py  plugin.py
